--- a/moveit_benchmark_suite/config/benchmark/bbt_primitive_planners.yaml
+++ b/moveit_benchmark_suite/config/benchmark/bbt_primitive_planners.yaml
@@ -25,28 +25,28 @@ benchmark_config:
     planning_pipelines:
         - name: ompl
           planners:
-            - SBLkConfigDefault
-            - ESTkConfigDefault
-            - LBKPIECEkConfigDefault
-            - BKPIECEkConfigDefault
-            - KPIECEkConfigDefault
-            - RRTkConfigDefault
+            #- SBLkConfigDefault
+            #- ESTkConfigDefault
+            #- LBKPIECEkConfigDefault
+            #- BKPIECEkConfigDefault
+            #- KPIECEkConfigDefault
+            #- RRTkConfigDefault
             - RRTConnectkConfigDefault
-            #- RRTstarkConfigDefault
-            #- TRRTkConfigDefault
-            - PRMkConfigDefault
-            #- PRMstarkConfigDefault
-            - FMTkConfigDefault
-            - BFMTkConfigDefault
-            - PDSTkConfigDefault
-            - STRIDEkConfigDefault
-            #- BiTRRTkConfigDefault
-            #- LBTRRTkConfigDefault
-            - BiESTkConfigDefault
-            - ProjESTkConfigDefault
-        - name: chomp
-          planners:
-            - CHOMP
+            ##- RRTstarkConfigDefault
+            ##- TRRTkConfigDefault
+            #- PRMkConfigDefault
+            ##- PRMstarkConfigDefault
+            #- FMTkConfigDefault
+            #- BFMTkConfigDefault
+            #- PDSTkConfigDefault
+            #- STRIDEkConfigDefault
+            ##- BiTRRTkConfigDefault
+            ##- LBTRRTkConfigDefault
+            #- BiESTkConfigDefault
+            #- ProjESTkConfigDefault
+        #- name: chomp
+        #  planners:
+        #    - CHOMP
         - name: stomp
           planners:
             - STOMP
