--- a/package.xml
+++ b/package.xml
@@ -8,6 +8,9 @@
 	
 	<buildtool_depend>catkin</buildtool_depend>
 
+	<depend>boost</depend>
+	<depend>yaml-cpp</depend>
+
 	<depend>geometric_shapes</depend>
 	<depend>geometry_msgs</depend>
 	<depend>eigen_conversions</depend>
