--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,7 +42,8 @@ include_directories(include ${catkin_INCLUDE_DIRS})
 add_library(${PROJECT_NAME}
   src/yaml.cpp
   src/io.cpp
-  src/geometry.cpp)
+  src/geometry.cpp
+  src/planning.cpp)
 
 add_executable(move_group_interface_benchmark scripts/move_group_interface_benchmark.cpp)
 target_link_libraries(move_group_interface_benchmark ${PROJECT_NAME} ${catkin_LIBRARIES} yaml-cpp)
