--- a/benchmark_suite/CMakeLists.txt
+++ b/benchmark_suite/CMakeLists.txt
@@ -46,7 +46,8 @@ add_library(${PROJECT_NAME}
   src/io.cpp
   src/geometry.cpp
   src/planning.cpp
-  src/benchmark.cpp)
+  src/benchmark.cpp
+  src/robot.cpp)
 
 add_executable(move_group_interface_benchmark scripts/move_group_interface_benchmark.cpp)
 target_link_libraries(move_group_interface_benchmark ${PROJECT_NAME} ${catkin_LIBRARIES} yaml-cpp)
