Refactor the motion planning backend
The motion planning configuration is now use to setup the benchmark
at runtime.

--- a/benchmark_suite/config/motion_planning_config.yaml
+++ b/benchmark_suite/config/motion_planning_config.yaml
@@ -1,19 +1,19 @@
 motion_planning_config:
   parameters:
     name: "Planning pipeline"
-    runs: 50                      # Number of runs per scene, interface, collision detector and each planning algorithm
-    timeout: 10                   # Default 10.0
+    runs: 10                      # Number of runs per scene, interface, collision detector and each planning algorithm
+    timeout: 5                   # Default 10.0
   interface:                      # [PlanningPipeline, MoveGroupInterface]
-    - MoveGroupInterface
     - PlanningPipeline
+    #- MoveGroupInterface
   collision_detector:             # [FCL, Bullet]
     - FCL
-    - Bullet                      # Not configurable when using the MoveGroupInterface  
+    #- Bullet                      # Not configurable when using the MoveGroupInterface  
   planning_pipelines:  
     - name: ompl                                                              # REQUIRED
       planners:                                                               # REQUIRED
         - RRTConnectkConfigDefault
-    - name: chomp
+    - name: stomp
       planners:
-        - CHOMP 
+        - STOMP 
 
