Overhaul of Benchmark class
The Benchmark class uses template so that it can be reused for every
type of benchmarking. The benchmark now focuses exclusively on passing
the  queries to the Profiler and to generate the dataset metrics.The
Profiler is responsible to create metrics for the data in the dataset.

--- a/benchmark_suite/CMakeLists.txt
+++ b/benchmark_suite/CMakeLists.txt
@@ -57,10 +57,10 @@ add_library(${PROJECT_NAME}
   src/scene.cpp
   src/log.cpp
   src/planning.cpp
-  src/benchmark.cpp
   src/trajectory.cpp
   src/io/gnuplot.cpp
   src/backend/motion_planning_config.cpp
+  src/backend/motion_planning_benchmark.cpp
   src/backend/mtc_pickplace.cpp)
 
 add_executable(motion_planning src/backend/motion_planning.cpp)
