--- a/benchmark_suite/CMakeLists.txt
+++ b/benchmark_suite/CMakeLists.txt
@@ -76,6 +76,9 @@ if("${catkin_LIBRARIES}" MATCHES "moveit_collision_detection_bullet")
   target_link_libraries(collision_checks fcl ${PROJECT_NAME} ${catkin_LIBRARIES} yaml-cpp)
 endif()
 
+add_executable(plot_dataset src/plot_dataset.cpp)
+target_link_libraries(plot_dataset ${PROJECT_NAME} ${catkin_LIBRARIES} yaml-cpp)
+
 add_executable(yaml_test src/test/yaml_test.cpp)
 target_link_libraries(yaml_test ${PROJECT_NAME} ${catkin_LIBRARIES} yaml-cpp)
 
@@ -87,6 +90,7 @@ install(TARGETS
   motion_planning
   mtc_runtask
   collision_checks
+  plot_dataset
 	LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 	ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 	RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
