Move token header implementation to cpp file

--- a/benchmark_suite/CMakeLists.txt
+++ b/benchmark_suite/CMakeLists.txt
@@ -52,6 +52,7 @@ add_library(${PROJECT_NAME}
   src/yaml.cpp
   src/io.cpp
   src/geometry.cpp
+  src/token.cpp
   src/dataset.cpp
   src/benchmark.cpp
   src/robot.cpp
