Rename yaml root benchmark config

--- a/benchmark_suite/examples/motion_planning.yaml
+++ b/benchmark_suite/examples/motion_planning.yaml
@@ -1,4 +1,4 @@
-motion_planning_config:
+benchmark_config:
   parameters:
     name: "Planning pipeline"
     runs: 5                      # Number of runs per scene, interface, collision detector and each planning algorithm
