--- a/benchmark_suite/examples/motion_planning.yaml
+++ b/benchmark_suite/examples/motion_planning.yaml
@@ -1,6 +1,6 @@
 benchmark_config:
   parameters:
-    name: "Planning pipeline"
+    name: "PlanningPipeline"
     runs: 5                             # Number of runs per scene, interface, collision detector and each planning algorithm
     timeout: 5                          # Default 10.0
 
@@ -10,13 +10,13 @@ benchmark_config:
 
   collision_detector:
     - FCL
-    - Bullet                            # Not configurable when using the MoveGroupInterface
+    #- Bullet                            # Not configurable when using the MoveGroupInterface
 
   planning_pipelines:
     - name: ompl                        # REQUIRED
       planners:                         # REQUIRED
         - RRTConnectkConfigDefault
-        - RRTkConfigDefault
+        #- RRTkConfigDefault
     #- name: stomp
     #  planners:
     #    - STOMP
