--- a/benchmark_suite/config/collision_check.yaml
+++ b/benchmark_suite/config/collision_check.yaml
@@ -53,7 +53,7 @@ forward_robot_state:
 
 ##############################################################################
 #
-# OPTIONNAL: Use to Aggregate and/or Plot after the benchmark is completed
+# OPTIONAL: Use to Aggregate and/or Plot after the benchmark is completed
 #
 ##############################################################################
 
