Add tf to the PlanningScene (#9)
The PlanningScene does not have a concept of time, thus no notion of tf
broadcasted. Some robots have the tf from world to the base link inside the URDF
and others send this information via the tfBroadcaster. This fixes the
`Unkown Frame` when the later option is used.

--- a/benchmark_suite/package.xml
+++ b/benchmark_suite/package.xml
@@ -9,8 +9,8 @@
 	<buildtool_depend>catkin</buildtool_depend>
 
 	<depend>boost</depend>
+	<depend>tf2_ros</depend>
 	<depend>yaml-cpp</depend>
-
 	<depend>geometric_shapes</depend>
 	<depend>geometry_msgs</depend>
 	<depend>eigen_conversions</depend>
