--- a/mtc/package.xml
+++ b/mtc/package.xml
@@ -17,7 +17,7 @@
 	<depend>moveit_ros_planning_interface</depend>
 	<depend>visualization_msgs</depend>
 	<depend>moveit_visual_tools</depend>
-	<depend>scene_parser</depend>
+	<depend>urdf_to_scene</depend>
 	<depend>moveit_benchmark_suite</depend>
 	<depend>moveit_benchmark_suite_resources</depend>
 	<depend>moveit_task_constructor_core</depend>
