Add ROS parameter server handler

--- a/benchmark_suite/CMakeLists.txt
+++ b/benchmark_suite/CMakeLists.txt
@@ -59,6 +59,7 @@ add_library(${PROJECT_NAME}
   src/log.cpp
   src/planning.cpp
   src/trajectory.cpp
+  src/io/handler.cpp
   src/io/gnuplot.cpp
   src/benchmarks/builder/motion_planning.cpp
   src/benchmarks/config/motion_planning_config.cpp
