--- a/benchmark_suite/config/motion_planning_pp.yaml
+++ b/benchmark_suite/config/motion_planning_pp.yaml
@@ -4,7 +4,7 @@ benchmark_config:
     runs: 5                             # Number of runs per scene, interface, collision detector and each planning algorithm
     timeout: 5                          # Default 10.0
 
-  collision_detector:
+  collision_detectors:
     - FCL
     #- Bullet                            # Not configurable when using the MoveGroupInterface
 
