Move collision detector param to yaml config
This will restore the collision detector config parameter for the motion
planning of the MoveGroupInterface.

--- a/benchmark_suite/config/motion_planning_pp.yaml
+++ b/benchmark_suite/config/motion_planning_pp.yaml
@@ -4,9 +4,8 @@ benchmark_config:
     runs: 5                             # Number of runs per scene, interface, collision detector and each planning algorithm
     timeout: 5                          # Default 10.0
 
-  collision_detectors:
+  collision_detectors:                  # REQUIRED [FCL, Bullet]
     - FCL
-    #- Bullet                            # Not configurable when using the MoveGroupInterface
 
   planning_pipelines:
     - name: ompl                        # REQUIRED
