--- a/benchmark_suite/config/motion_planning_mgi.yaml
+++ b/benchmark_suite/config/motion_planning_mgi.yaml
@@ -4,6 +4,8 @@ benchmark_config:
     runs: 5                             # Number of runs per scene, interface, collision detector and each planning algorithm
     timeout: 5                          # Default 10.0
 
+  collision_detector: FCL               # REQUIRED
+
   planning_pipelines:
     - name: ompl                        # REQUIRED
       planners:                         # REQUIRED
