--- a/benchmark_suite/CMakeLists.txt
+++ b/benchmark_suite/CMakeLists.txt
@@ -64,6 +64,7 @@ add_library(${PROJECT_NAME}
   src/io/gnuplot.cpp
   src/config/aggregate_config.cpp
   src/config/gnuplot_config.cpp
+  src/config/html_config.cpp
   src/config/motion_planning_config.cpp
   src/benchmarks/builder/motion_planning.cpp
   src/benchmarks/motion_planning_benchmark.cpp
